--- a/README
+++ b/README
@@ -1,15 +1,12 @@
 2021-11-12: Florian Heinz <florian.heinz@oth-regensburg.de>
 
-====================
-|     Breakout     |
-====================
+Breakout       
+========
 
-Aufgabe:
+**Aufgabe:**
 
 Erweitern Sie das Spiel Breakout, so dass der Abprallwinkel vom Paddle
 abhaengig vom Auftreffpunkt ist. Je weiter aussen der Ball auftrifft,
 desto staerker soll der Winkel von einer normalen Reflexion abweichen.
 
-Viel Erfolg!
-
-
+Viel Erfolg! 🍀
